1. init xxl-job empty executor 2. fix bug